(related to bug 1764,1639.1638,2069) Logging normalization ReCSystemProperty enum access Implementation of error messages in splash screen Implementation of autoconnect corrections
git-svn-id: file:///tmp/svnroot_only_rec/internal/rec-project/rec/trunk@8203 8c4c7310-a39f-45c4-bd0d-b10b2e5d99a4